--- a/tex/3-architektura/4-instrukcja-uzycia.tex
+++ b/tex/3-architektura/4-instrukcja-uzycia.tex
@@ -1,11 +1,11 @@
 \subsection{Instrukcja Użycia}
 
-Niniejszy podrozdział prezentuje krótką instrukcję użycia platformy \hyperlink{def:lupus}{\textbf{Lupus}}. \hyperlink{def:uzytkownik}{\textbf{Użytkownikiem}} \hyperlink{def:lupus}{\textbf{Lupus}} może stać się dowolna organizacja bądź pojedyncza osoba. Ważne jest, aby zespół \hyperlink{def:uzytkownik}{\textbf{Użytkownika}} posiadał kompetencje z zakresu tworzenia oprogramowania. W zespole \hyperlink{def:uzytkownik}{\textbf{Użytkownika}} wyróżniamy rolę \hyperlink{def:projektant}{\textbf{Projektanta}}, który jest odpowiedzialny jedynie za projektowanie i wyrażanie \hyperlink{def:workflow-petli}{\textbf{Workflow Pętli}} oraz niekoniecznie – zgodnie z \hyperref[req:12]{Wymaganiem 12} – musi posiadać umiejętności techniczne. 
+Niniejszy podrozdział prezentuje krótką instrukcję użycia platformy \hyperlink{def:lupus}{\textbf{Lupus}}. \hyperlink{def:uzytkownik}{\textbf{Użytkownikiem}} \hyperlink{def:lupus}{\textbf{Lupus}} może stać się dowolna organizacja bądź pojedyncza osoba. Istotnym jest, aby zespół \hyperlink{def:uzytkownik}{\textbf{Użytkownika}} posiadał kompetencje z zakresu tworzenia oprogramowania. W zespole \hyperlink{def:uzytkownik}{\textbf{Użytkownika}} wyróżniamy rolę \hyperlink{def:projektant}{\textbf{Projektanta}}, który jest odpowiedzialny jedynie za projektowanie i wyrażanie \hyperlink{def:workflow-petli}{\textbf{Workflow Pętli}} oraz niekoniecznie – zgodnie z \hyperref[req:12]{Wymaganiem 12} – musi posiadać umiejętności techniczne. 
 
 Kiedy dany \hyperlink{def:uzytkownik}{\textbf{Użytkownik}} planuje użyć \hyperlink{def:lupus}{\textbf{Lupus}} jako \hyperlink{def:system-sterowania}{\textbf{Systemu Sterowania}} do rozwiązywania \hyperlink{def:problem-zarzadzania}{\textbf{Problemu Zarządzania}} w swoim \hyperlink{def:system-zarzadzany}{\textbf{Systemie Zarządzanym}}, powinien:
 \begin{enumerate}
     \item Zainstalować \hyperlink{def:lupus}{\textbf{Lupus}} w swoim klastrze Kubernetes.
-    \item Zintegrować \hyperlink{def:system-zarzadzany}{\textbf{System Zarządzany}} z \hyperlink{def:lupus}{\textbf{Lupusem}} poprzez implementację \hyperlink{def:agent-translacji}{\textbf{Agentów Translacji}}.
+    \item Zintegrować \hyperlink{def:system-zarzadzany}{\textbf{System Zarządzany}} z platformą \hyperlink{def:lupus}{\textbf{Lupus}} poprzez implementację \hyperlink{def:agent-translacji}{\textbf{Agentów Translacji}}.
     \item Zaplanować \hyperlink{def:workflow-petli}{\textbf{Workflow Pętli}}.
     \item Przygotować \hyperlink{def:element-zewnetrzny}{\textbf{Elementy Zewnętrzne}}.
     \item Wyrazić \hyperlink{def:workflow-petli}{\textbf{Workflow Pętli}} w \hyperlink{def:lupn}{\textbf{LupN}}.
@@ -28,7 +28,7 @@ Podczas implementacji należy kierować się specyfikacją \hyperlink{def:interf
 
 \subsubsection{Planowanie Logiki Pętli}
 
-\hyperlink{def:workflow-petli}{\textbf{Workflow Pętli}} powinno wyrazić \hyperlink{def:logika-petli}{\textbf{Logikę Pętli}}, czyli w każdej iteracji doprowadzić \hyperlink{def:system-zarzadzany}{\textbf{System Zarządzany}} do \hyperlink{def:stan-pozadany}{\textbf{Stanu Pożądanego}}. \hyperlink{def:uzytkownik}{\textbf{Użytkownik}} w tym kroku jedynie modeluje wysokopoziomowo \hyperlink{def:workflow-petli}{\textbf{Workflow Pętli}}, rysując np. jego diagram. Dopiero takie spojrzenie podpowie \hyperlink{def:uzytkownik}{\textbf{Użytkownikowi}}, jakich \hyperlink{def:element-zewnetrzny}{\textbf{Elementów Zewnętrznych}} potrzebuje.
+\hyperlink{def:workflow-petli}{\textbf{Workflow Pętli}} powinno wyrazić \hyperlink{def:logika-petli}{\textbf{Logikę Pętli}}, czyli w każdej iteracji doprowadzać \hyperlink{def:system-zarzadzany}{\textbf{System Zarządzany}} do \hyperlink{def:stan-pozadany}{\textbf{Stanu Pożądanego}}. \hyperlink{def:uzytkownik}{\textbf{Użytkownik}} w tym kroku jedynie modeluje wysokopoziomowo \hyperlink{def:workflow-petli}{\textbf{Workflow Pętli}}, rysując np. jego diagram. Dopiero takie spojrzenie podpowie \hyperlink{def:uzytkownik}{\textbf{Użytkownikowi}}, jakich \hyperlink{def:element-zewnetrzny}{\textbf{Elementów Zewnętrznych}} potrzebuje.
 
 \subsubsection{Przygotowanie Elementów Zewnętrznych}
 
@@ -36,16 +36,16 @@ Podczas implementacji należy kierować się specyfikacją \hyperlink{def:interf
 
 Rekomendowanym przez \hyperlink{def:lupus}{\textbf{Lupus}} typem \hyperlink{def:element-zewnetrzny}{\textbf{Elementu Zewnętrznego}} jest serwer \hyperlink{def:opa}{\textbf{Open Policy Agent}}. Przygotowanie w tym wypadku polega na uruchomieniu takiego serwera oraz wgraniu mu odpowiednich polityk. \hyperlink{def:uzytkownik}{\textbf{Użytkownik}} jednakże może wydewelopować dowolny serwer HTTP.
 
-Ostatnim możliwym \hyperlink{def:element-zewnetrzny}{\textbf{Elementem Zewnętrznym}} są \hyperlink{def:funkcje-uzytkownika}{\textbf{Funkcje Użytkownika}}. Są to funkcje w kodzie \textit{kontrolera} zasobu \hyperlink{def:element-lupus}{\textbf{Lupus Element}}, które są definiowane przez \hyperlink{def:uzytkownik}{\textbf{Użytkownika}}. Stanowią one alternatywę dla serwerów HTTP, gdy specjalne wdrażanie takowych może się okazać zbyt kosztowne. Przykładowo, jeśli logika wykonywana przez dany \hyperlink{def:element-zewnetrzny}{\textbf{Element Zewnętrzny}} miałaby mieć tylko kilka linijek kodu, dużo łatwiej użyć \hyperlink{def:funkcje-uzytkownika}{\textbf{Funkcji Użytkownika}}. Ich dokładniejszy opis znajduje się w \hyperref[sec:funkcje-uzytkownika]{podrozdziale \ref{sec:funkcje-uzytkownika}}.
+Ostatnim możliwym \hyperlink{def:element-zewnetrzny}{\textbf{Elementem Zewnętrznym}} są \hyperlink{def:funkcje-uzytkownika}{\textbf{Funkcje Użytkownika}}. Są to funkcje w kodzie \textit{kontrolera} zasobu \hyperlink{def:element-lupus}{\textbf{Lupus Element}}, które są definiowane przez \hyperlink{def:uzytkownik}{\textbf{Użytkownika}}. Stanowią one alternatywę dla serwerów HTTP, gdy specjalne wdrażanie takowych może się okazać zbyt kosztowne. Przykładowo, jeśli logika wykonywana przez dany \hyperlink{def:element-zewnetrzny}{\textbf{Element Zewnętrzny}} miałaby mieć tylko kilka linijek kodu, dużo łatwiej użyć \hyperlink{def:funkcje-uzytkownika}{\textbf{Funkcji Użytkownika}}, których dokładniejszy opis znajduje się w \hyperref[sec:funkcje-uzytkownika]{podrozdziale \ref{sec:funkcje-uzytkownika}}.
 
 
 \subsubsection{Wyrażenie workflow pętli}
 
-Gdy już całe \hyperlink{def:workflow-petli}{\textbf{Workflow Pętli}} oraz \hyperlink{def:element-zewnetrzny}{\textbf{Elementy Zewnętrzne}} są gotowe, czas wyrazić je w notacji \hyperlink{def:lupn}{\textbf{LupN}}. Za jej pomocą wyraża się \hyperlink{def:workflow-petli}{\textbf{Workflow Pętli}} jako zbiór \hyperlink{def:element-lupus}{\textbf{Elementów Lupus}}, połączenia między nimi oraz specyfikacja każdego z nich.
+Gdy już całe \hyperlink{def:workflow-petli}{\textbf{Workflow Pętli}} oraz \hyperlink{def:element-zewnetrzny}{\textbf{Elementy Zewnętrzne}} są gotowe, czas wyrazić je w notacji \hyperlink{def:lupn}{\textbf{LupN}}. Za jej pomocą wyraża się \hyperlink{def:workflow-petli}{\textbf{Workflow Pętli}} jako zbiór \hyperlink{def:element-lupus}{\textbf{Elementów Lupus}}, połączenia między nimi oraz specyfikacja każdego z nich. Dokumentacja notacji Lupn znajduje się w \hyperlink{appendix:3}{Załączniku 3}.
 
 \subsubsection{Aplikacja plików manifestacyjnych}
 
-Aby stworzyć pętlę opisaną przez \hyperlink{def:kod-lupn}{\textbf{Kod LupN}} w pliku manifestacyjnym zasobu \hyperlink{def:master}{\textbf{Master}}, należy wykonać komendę z listingu \ref{lst:2}, która tworzy instancję \textit{obiektu API} typu \hyperlink{def:master}{\textbf{Master}}. Kontroler tego zasobu stworzy odpowiednie obiekty API typu \hyperlink{def:element}{\textbf{Element}} według specyfikacji w pliku \hyperlink{def:plik-lupn}{\textbf{LupN}}. Podczas iteracji pętli, kontroler każdego \hyperlink{def:element}{\textbf{Elementu}} interpretuje ich specyfikację, wykonując odpowiednie \hyperlink{def:akcja}{\textbf{Akcje}} na \hyperlink{def:dane}{\textbf{Danych}}. \hyperlink{def:workflow-petli}{\textbf{Workflow Akcji}} również specyfikowane jest w notacji \hyperlink{def:lupn}{\textbf{LupN}} (\hyperref[appendix:3]{Załącznik 3}).
+Aby stworzyć pętlę opisaną przez \hyperlink{def:kod-lupn}{\textbf{Kod LupN}}, należy wykonać komendę z listingu \ref{lst:2}, która tworzy instancję \textit{obiektu API} typu \hyperlink{def:master}{\textbf{Master}}. Kontroler tego zasobu stworzy odpowiednie obiekty API typu \hyperlink{def:element}{\textbf{Element}} według specyfikacji w pliku \hyperlink{def:plik-lupn}{\textbf{LupN}}. Podczas iteracji pętli, kontroler każdego \hyperlink{def:element}{\textbf{Elementu}} interpretuje ich specyfikację, wykonując odpowiednie \hyperlink{def:akcja}{\textbf{Akcje}} na \hyperlink{def:dane}{\textbf{Danych}}. \hyperlink{def:workflow-petli}{\textbf{Workflow Akcji}} również specyfikowane jest w notacji \hyperlink{def:lupn}{\textbf{LupN}} (\hyperref[appendix:3]{Załącznik 3}).
 
 \begin{lstlisting}[language=sh, caption={\emph{Stworzenie zasobu Master}}\label{lst:2}]
     kubectl apply -f <nazwa_pliku>
