--- a/tex/appendix/1-definicje.tex
+++ b/tex/appendix/1-definicje.tex
@@ -45,7 +45,7 @@ Specyfikacja w formie elektronicznej znajduje się pod linkiem: \url{https://git
 \acronym{Element Zewnętrzny (ang. \textit{External Element})}{Jeden z elementów pętli. Działa poza klastrem Kubernetes. Jego celem jest część obliczeniowa logiki pętli.}
 
 \hypertarget{def:finalne-dane}{}
-\acronym{Finalne dane (ang. \textit{Final Data})}{Postać danych po wykonaniu ostatniej akcji z workflow akcji Elementu Egress. To ona definiuje Akcję Sterującą.}
+\acronym{Finalne dane (ang. \textit{Final Data})}{Postać danych po wykonaniu ostatniej akcji z workflow akcji Elementu. W przypadku elementu Egress ona definiuje Akcję Sterującą.}
 
 \hypertarget{def:funkcje-uzytkownika}{}
 \acronym{Funkcje użytkownika (ang. \textit{User Functions})}{Alternatywa dla wdrażania serwerów HTTP do prostych obliczeń. Funkcje użytkownika działają jak elementy zewnętrzne, ale są wykonywane w klastrze Kubernetes. Jest to jedna z dostępnych \hyperlink{def:destynacja}{Destynacji} w \hyperlink{def:lupn}{Lupn}.}
