--- a/tex/appendix/3-lupn.tex
+++ b/tex/appendix/3-lupn.tex
@@ -1,4 +1,4 @@
-\appendix{Specyfikacja notacji LupN}\label{appendix:3}
+\appendix{Specyfikacja notacji LupN}\label{appendix:3}\hypertarget{appendix:3}{}
 
 Specyfikacja w formie elektronicznej znajduje się pod linkiem: \url{https://github.com/0x41gawor/lupus/blob/master/docs/spec/lupn.md}.
 
