--- a/tex/4-implementacja/3-decyzje.tex
+++ b/tex/4-implementacja/3-decyzje.tex
@@ -6,20 +6,20 @@ Podczas realizacji projektu zbadano różne podejścia i rozwiązano liczne prob
 
 \subsubsection{Komunikacja pomiędzy Elementami Lupus}
 
-Pierwszym krokiem w implementacji było wymyślenie sposobu na komunikację pomiędzy \hyperlink{def:element-lupus}{\textbf{Elementami Lupus}}. Z racji, że \hyperlink{def:element-lupus}{\textbf{Elementy Lupus}} są \textit{Zasobami Własnymi}, wykorzystano tu natywne mechanizmy Kubernetes opisane w podrozdziałach 4.2 i 4.3. Ideą było to, że \textit{Operator} jednego zasobu dokonuje zmian w obiekcie API innego elementu, co z kolei wywoła ponownie Operator z innym obiektem wejściowym. \hyperlink{def:element-lupus}{\textbf{Elementy Lupus}} modyfikują nawzajem swój \texttt{Status}, a dokładniej jego pole \texttt{input}, przekazując tam swoją \hyperlink{def:finalne-dane}{\textbf{finalną postać danych}}.
+Pierwszym krokiem w implementacji było wymyślenie sposobu na komunikację pomiędzy \hyperlink{def:element-lupus}{\textbf{Elementami Lupus}}. Z racji, że \hyperlink{def:element-lupus}{\textbf{Elementy Lupus}} są \textit{Zasobami Własnymi}, wykorzystano tu natywne mechanizmy Kubernetes opisane w podrozdziałach 4.2 i 4.3. Ideą było to, że \textit{Operator} jednego elementu dokonuje zmian w obiekcie API innego elementu, co wywoła ponownie \textit{Operator} elementu ale z innym obiektem wejściowym. \hyperlink{def:element-lupus}{\textbf{Elementy Lupus}} modyfikują nawzajem swój \texttt{Status}, a dokładniej jego pole \texttt{input}, przekazując tam swoją \hyperlink{def:finalne-dane}{\textbf{finalną postać danych}}.
 
 \begin{figure}[!h]
     \centering \includegraphics[width=1\linewidth]{43-komunikacja.png}
     \caption{Komunikacja pomiędzy Elementami Lupus. Źródło: Opracowanie własne.}\label{fig:43-komunikacja}
 \end{figure}
 
-Sposób działania został ukazany na rysunku \ref{fig:43-komunikacja}. Początkowo \hyperlink{def:element-lupus}{\textbf{Elementy Lupus}} mogły przyjąć postać jednego z trzech typów: Observe, Decide lub Execute\footnote{W myśl pętli ODA}. \hyperlink{def:agent-ingress}{\textbf{Agent Ingress}} modyfikował \texttt{Status} obiektu Observe (krok 1). To wywoływało operator elementu "Observe" (krok 2). Operator Observe modyfikował \texttt{Status} obiektu Decide (krok 3). Na koniec modyfikacje otrzymywał obiekt elementu "Act" (krok 5), którego Operator przekazywał swoje \hyperlink{def:dane}{\textbf{Dane}} do \hyperlink{def:agent-egress}{\textbf{Agenta Egress}} (krok 7). 
+Sposób działania został ukazany na rysunku \ref{fig:43-komunikacja}. Początkowo \hyperlink{def:element-lupus}{\textbf{Elementy Lupus}} mogły przyjąć postać jednego z trzech typów: Observe, Decide lub Execute\footnote{W myśl okrojonej pętli OODA}. \hyperlink{def:agent-ingress}{\textbf{Agent Ingress}} modyfikował \texttt{Status} obiektu Observe (krok 1). To wywoływało operator elementu "Observe" (krok 2). Operator Observe modyfikował \texttt{Status} obiektu Decide (krok 3). Na koniec modyfikacje otrzymywał obiekt elementu "Act" (krok 5), którego Operator przekazywał swoje \hyperlink{def:dane}{\textbf{Dane}} do \hyperlink{def:agent-egress}{\textbf{Agenta Egress}} (krok 7). 
 
 Z czasem jednak, aby nie narzucać konkretnej struktury pętli, zrezygnowano z trzech typów i stworzono jeden uniwersalny typ, którego Operator jest w stanie wykonać \hyperlink{def:workflow-petli}{\textbf{Workflow Akcji}}, co pozwalało na wyrażenie logiki dowolnego z 3 poprzednich typów. W ten sposób spełniono \hyperref[req:10]{Wymaganie 10}.
 
 \subsubsection{Dane}
 
-\hyperref[req:5]{Wymaganie 5} nakazuje, aby \hyperlink{def:element-lupus}{\textbf{Elementy Lupus}} były sterowane danymi (\textit{data-driven}). \hyperlink{def:dane}{\textbf{Dane}} oraz \hyperlink{def:workflow-petli}{\textbf{Workflow Akcji}} spełniają to wymaganie. Dzięki nim \hyperlink{def:element-lupus}{\textbf{Elementy Lupus}} mogą wykonać dowolny zestaw \hyperlink{def:akcja}{\textbf{Akcji}} na \hyperlink{def:dane}{\textbf{Danych}}, dając \hyperlink{def:projektant}{\textbf{Projektantowi}} pewną elastyczność. To właśnie \hyperlink{def:dane}{\textbf{Dane}} przekazywane są jako pole \texttt{input} w statusie obiektu API \hyperlink{def:element-lupus}{\textbf{Elementu Lupus}}. 
+\hyperref[req:10]{Wymaganie 10} nakazuje, aby \hyperlink{def:element-lupus}{\textbf{Elementy Lupus}} były sterowane danymi (\textit{data-driven}). \hyperlink{def:dane}{\textbf{Dane}} oraz \hyperlink{def:workflow-petli}{\textbf{Workflow Akcji}} spełniają to wymaganie. Dzięki nim \hyperlink{def:element-lupus}{\textbf{Elementy Lupus}} mogą wykonać dowolny zestaw \hyperlink{def:akcja}{\textbf{Akcji}} na \hyperlink{def:dane}{\textbf{Danych}}, dając \hyperlink{def:projektant}{\textbf{Projektantowi}} pewną elastyczność. To właśnie \hyperlink{def:dane}{\textbf{Dane}} przekazywane są jako pole \texttt{input} w statusie obiektu API \hyperlink{def:element-lupus}{\textbf{Elementu Lupus}}. 
 
 Z racji uniwersalności \hyperlink{def:dane}{\textbf{Danych}}, należało wybrać format, który pozwoli na ich możliwie dużą dowolność. Wybór padł na JSON, ze względu na jego ogólnie przyjęty standard i możliwości reprezentacji dowolnej struktury danych. 
 
@@ -65,6 +65,9 @@ Nie obejmuje to jednak wszystkich obiektów JSON, jakie istnieją. JSON pozwala,
     \item obiektem JSON z kluczami innymi niż \texttt{string}.
 \end{itemize}
 
+Warto zaznaczyć, że nazwa „Dane” nawiązuje do definicji przedstawionej we wstępie historycznym. Dopiero komponenty zewnętrzne względem platformy Lupus, czyli elementy systemu zarządzania wyposażone w mechanizmy sztucznej inteligencji, będą przekształcać dane pochodzące z systemu zarządzanego w informacje lub wiedzę.
+
+Dla platformy, która pełni jedynie funkcję orkiestratora workflow pętli sterowania, dane pozostają transparentne. Nazwa „Dane” podkreśla ich surową formę, wskazując, że platforma nie dokonuje ich interpretacji ani przetwarzania.
 
 \subsubsection{Polimorfizm w Go}
 
@@ -115,7 +118,7 @@ func main() {
 }
 \end{lstlisting}
 
-\textbf{Jak to działa}
+\textbf{Schemat działania}
 
 \begin{itemize}
     \item \textbf{Definicja interfejsu:}  
@@ -130,7 +133,7 @@ func main() {
 
 \textbf{Polimorfizm poprzez wskaźniki oraz pole dyskryminatora}
 
-Kolejnym potężnym i idiomatycznym wzorcem w Go jest \textbf{polimorfizm w stylu Go z użyciem wskaźników}, gdzie struktura posiada opcjonalne pola wskaźnikowe, a pole \texttt{type} (znacznik) określa, które z tych pól jest istotne w czasie działania programu.
+Kolejnym potężnym i idiomatycznym wzorcem w Go jest \textbf{polimorfizm w stylu Go z użyciem wskaźników}, gdzie struktura posiada opcjonalne pola wskaźnikowe, a pole \texttt{type} (dyskryminator) określa, które z tych pól jest istotne w czasie działania programu.
 
 \begin{lstlisting}[language=go, caption={\emph{Przykład polimorfizmu poprzez wskaźniki oraz pole dyskryminatora}}\label{lst:435}]
 type Next struct {
@@ -168,7 +171,7 @@ func (n *Next) Validate() error {
 }
 \end{lstlisting}
 
-\textbf{Jak to działa}
+\textbf{Schemat działania}
 
 \textbf{Unia tagowana} to wzorzec, w którym pole \texttt{tag} określa, którą z kilku możliwych reprezentacji danych wykorzystuje dany obiekt. W Go jest to realizowane poprzez kombinację:
 
@@ -226,17 +229,17 @@ Różnice są widoczne w specyfikacji LupN w \hyperlink{appendix:3}{Załączniku
 
 Zgodnie z \hyperref[req:7]{Wymaganiem 7}, \hyperlink{def:element-lupus}{\textbf{Elementy Lupus}} nie wykonują \hyperlink{def:czesc-obliczeniowa}{\textbf{Części Obliczeniowej Logiki Pętli}}. Zamiast tego, jest ona delegowana do \hyperlink{def:element-zewnetrzny}{\textbf{Elementów Zewnętrznych}}.
 
-Pojawiają się tutaj dwa aspekty:
+W tym kontekście pojawiają się dwa kluczowe zagadnienia:
 \begin{itemize}
-    \item Co w sytuacji, gdy ktoś potrzebuje wykonać małą i prostą operację na \hyperlink{def:dane}{\textbf{Danych}} (np. dodanie dwóch pól), a wdrażanie dedykowanego serwera HTTP jest nieekonomiczne?
-    \item Każda platforma ramowa powinna być rozszerzalna. Powinniśmy zapewnić mechanizm umożliwiający rozszerzanie naszej platformy.
+    \item Jak ma postępować \hyperlink{def:uzytkownik}{\textbf{Użytkownik}} w sytuacji, gdy konieczne jest wykonanie prostej operacji na \hyperlink{def:dane}{Danych} (np. dodanie dwóch wartości), a wdrażanie dedykowanego serwera HTTP okazuje się nieopłacalne?
+    \item Każda platforma ramowa (ang. \textit{framework}) powinnna być rozszerzalna.
 \end{itemize}
 
-Z tych dwóch powodów wdrożono funkcję o nazwie „Definiowane przez użytkownika, wewnętrzne funkcje Go” (lub w skrócie – \hyperlink{def:funkcje-uzytkownika}{\textbf{Funkcje Użytkownika}}).
+Z tych dwóch powodów wdrożono mechanizm o nazwie „Definiowane przez użytkownika, wewnętrzne funkcje Go”, określany w skrócie jako \hyperlink{def:funkcje-uzytkownika}{\textbf{Funkcje Użytkownika}}.
 
 \hyperlink{def:uzytkownik}{\textbf{Użytkownik}} może definiować własne fragmenty kodu Go jako funkcje i wywoływać je jako jedną z \hyperlink{def:destynacja}{\textbf{Destynacji}} w akcji \hyperlink{def:akcja}{\textbf{Send}}.
 
-W repozytorium kodu z projektem Kubebuilder znajduję plik o nazwie \texttt{user-functions.go} \footnote{\url{https://github.com/0x41gawor/lupus/blob/master/lupus/internal/controller/user-functions.go}}. To w nim \textbf{Użytkownik} może definiować swoje funkcje. Plik posiada już jedną przykładową funkcję.
+W repozytorium kodu z projektem Kubebuilder znajduję plik o nazwie \texttt{user-functions.go} \footnote{\url{https://github.com/0x41gawor/lupus/blob/master/lupus/internal/controller/user-functions.go}}. To w nim \textbf{Użytkownik} może definiować swoje funkcje. Plik posiada jedną przykładową funkcję.
 
 \begin{lstlisting}[language=go, caption={\emph{Przykładowa funkcja użytkownika}}\label{lst:436}]
 // Exemplary user-function. It just returns the input
@@ -245,7 +248,7 @@ func (UserFunctions) Echo(input interface{}) (interface{}, error) {
 }
 \end{lstlisting}
 
-Funkcja jako argument przyjmuje \texttt{interface{}}, który będzie reprezentował \textbf{pole danych}.\footnote{Pola lub pola, gdyż pod tym pojęciem może też się kryć użycie "*"}. Zwracanym typem jest również \texttt{interface{}}, który zostanie przez akcję send wpisany jako \textbf{pole danych}.
+Funkcja jako argument przyjmuje \texttt{interface{}}, który będzie reprezentował \textbf{pole danych}.\footnote{Pola lub pól, gdyż pod tym pojęciem może też się kryć użycie "*"}. Zwracanym typem jest również \texttt{interface{}}, ponieważ wartość zwracana przez element zewnętrzny zostaje wpisana do \textbf{pola danych}.
 
 Nazwa \texttt{UserFunctions} jest strukturą, która gromadzi funkcje użytkownika.
 
@@ -254,7 +257,7 @@ Nazwa \texttt{UserFunctions} jest strukturą, która gromadzi funkcje użytkowni
 type UserFunctions struct{}
 \end{lstlisting}
 
-Powstaje teraz pytanie jak wywołać takową funkcję w notacji \hyperlink{def:lupn}{\textbf{LupN}}. Na szczęście funkcje w Go mogą być używane jako typy i przechowywane jako wartości. Dzięki temu mogą zostać zapisane jako wartości w mapie klucz-wartość, gdzie nazwy funkcje typu \texttt{string} pełnią rolę kluczy.
+Pojawia się zatem pytanie, jak wywołać taką funkcję w notacji \hyperlink{def:lupn}{\textbf{LupN}}. Na szczęście funkcje w Go mogą być używane jako typy i przechowywane jako  co umożliwia ich zapis w strukturze mapy klucz-wartość, gdzie nazwy funkcji (typ \texttt{string}) pełnią rolę kluczy.
 
 
 \begin{lstlisting}[language=go, caption={\emph{Mapa przechowująca funkcje użytkownika}}\label{lst:438}]
@@ -309,7 +312,7 @@ func init() {
 \end{lstlisting}
 
 
-Od tego momentu funkcja może zostać wywołana po nazwie w funkcji obsługujące akcję Send w interpreterze Operatora Elementu Lupus.
+Od tego momentu, dana funkcja może zostać wywołana po nazwie w funkcji obsługującej akcję Send w interpreterze Operatora Elementu Lupus.
 
 \begin{lstlisting}[language=go, caption={\emph{Wywołąnie funkcji użytkownika w akcji send}}\label{lst:4311}]
 func sendToGoFunc(funcName string, body interface{}) (interface{}, error) {
